task1/log/build_2025-11-14_10-26-48/sesnor_pipeline_pkg/stderr.log
  File "/root/ros_ws/tasks/install/sesnor_pipeline_pkg/lib/python3.10/site-packages/sesnor_pipeline_pkg/logger_node.py", line 17
    def main(args=None)
                       ^
SyntaxError: expected ':'

